k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egos-ingress
  namespace: egos
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "egos-ssl"
    networking.gke.io/v1beta1.FrontendConfig: "egos-frontend-config"
    kubernetes.io/ingress.allow-http: "true"
    cloud.google.com/backend-config: '{"default": "egos-backend-config"}'
spec:
  rules:
  - host: egoscolombia.com.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: www.egoscolombia.com.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: api.egoscolombia.com.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 80
